; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/wireless/ath/ath6kl/extr_wmi.c_ath6kl_wmi_set_apsd_bfrd_traf.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/wireless/ath/ath6kl/extr_wmi.c_ath6kl_wmi_set_apsd_bfrd_traf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wmi = type { i32 }
%struct.wmi_ap_apsd_buffered_traffic_cmd = type { i32, i8*, i8* }
%struct.sk_buff = type { i64 }

@ENOMEM = common dso_local global i32 0, align 4
@WMI_AP_APSD_BUFFERED_TRAFFIC_CMDID = common dso_local global i32 0, align 4
@NO_SYNC_WMIFLAG = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ath6kl_wmi_set_apsd_bfrd_traf(%struct.wmi* %0, i32 %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca %struct.wmi*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca %struct.wmi_ap_apsd_buffered_traffic_cmd*, align 8
  %13 = alloca %struct.sk_buff*, align 8
  store %struct.wmi* %0, %struct.wmi** %7, align 8
  store i32 %1, i32* %8, align 4
  store i32 %2, i32* %9, align 4
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  %14 = call %struct.sk_buff* @ath6kl_wmi_get_new_buf(i32 24)
  store %struct.sk_buff* %14, %struct.sk_buff** %13, align 8
  %15 = load %struct.sk_buff*, %struct.sk_buff** %13, align 8
  %16 = icmp ne %struct.sk_buff* %15, null
  br i1 %16, label %20, label %17

17:                                               ; preds = %5
  %18 = load i32, i32* @ENOMEM, align 4
  %19 = sub nsw i32 0, %18
  store i32 %19, i32* %6, align 4
  br label %43

20:                                               ; preds = %5
  %21 = load %struct.sk_buff*, %struct.sk_buff** %13, align 8
  %22 = getelementptr inbounds %struct.sk_buff, %struct.sk_buff* %21, i32 0, i32 0
  %23 = load i64, i64* %22, align 8
  %24 = inttoptr i64 %23 to %struct.wmi_ap_apsd_buffered_traffic_cmd*
  store %struct.wmi_ap_apsd_buffered_traffic_cmd* %24, %struct.wmi_ap_apsd_buffered_traffic_cmd** %12, align 8
  %25 = load i32, i32* %9, align 4
  %26 = call i8* @cpu_to_le16(i32 %25)
  %27 = load %struct.wmi_ap_apsd_buffered_traffic_cmd*, %struct.wmi_ap_apsd_buffered_traffic_cmd** %12, align 8
  %28 = getelementptr inbounds %struct.wmi_ap_apsd_buffered_traffic_cmd, %struct.wmi_ap_apsd_buffered_traffic_cmd* %27, i32 0, i32 2
  store i8* %26, i8** %28, align 8
  %29 = load i32, i32* %10, align 4
  %30 = call i8* @cpu_to_le16(i32 %29)
  %31 = load %struct.wmi_ap_apsd_buffered_traffic_cmd*, %struct.wmi_ap_apsd_buffered_traffic_cmd** %12, align 8
  %32 = getelementptr inbounds %struct.wmi_ap_apsd_buffered_traffic_cmd, %struct.wmi_ap_apsd_buffered_traffic_cmd* %31, i32 0, i32 1
  store i8* %30, i8** %32, align 8
  %33 = load i32, i32* %11, align 4
  %34 = call i32 @cpu_to_le32(i32 %33)
  %35 = load %struct.wmi_ap_apsd_buffered_traffic_cmd*, %struct.wmi_ap_apsd_buffered_traffic_cmd** %12, align 8
  %36 = getelementptr inbounds %struct.wmi_ap_apsd_buffered_traffic_cmd, %struct.wmi_ap_apsd_buffered_traffic_cmd* %35, i32 0, i32 0
  store i32 %34, i32* %36, align 8
  %37 = load %struct.wmi*, %struct.wmi** %7, align 8
  %38 = load i32, i32* %8, align 4
  %39 = load %struct.sk_buff*, %struct.sk_buff** %13, align 8
  %40 = load i32, i32* @WMI_AP_APSD_BUFFERED_TRAFFIC_CMDID, align 4
  %41 = load i32, i32* @NO_SYNC_WMIFLAG, align 4
  %42 = call i32 @ath6kl_wmi_cmd_send(%struct.wmi* %37, i32 %38, %struct.sk_buff* %39, i32 %40, i32 %41)
  store i32 %42, i32* %6, align 4
  br label %43

43:                                               ; preds = %20, %17
  %44 = load i32, i32* %6, align 4
  ret i32 %44
}

declare dso_local %struct.sk_buff* @ath6kl_wmi_get_new_buf(i32) #1

declare dso_local i8* @cpu_to_le16(i32) #1

declare dso_local i32 @cpu_to_le32(i32) #1

declare dso_local i32 @ath6kl_wmi_cmd_send(%struct.wmi*, i32, %struct.sk_buff*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
